# Vaakya

./: .gitignore  CLAUDE.md  README.md  projectworkflow.txt  pythoninstall.txt  render.yaml  vaakya_doc.txt  workflow.txt
backend/: .env.example  CLAUDE.md  pyproject.toml  run.py
backend/agents/: arambha.py  arambha_pdf.py  jokhim.py  parisheelanam.py  rachana.py  sahee.py  samjoota.py  sruthi.py  vivada.py
backend/api/: config.py  constants.py  llm_factory.py  main.py
backend/api/middleware/: auth.py
backend/api/routes/: document.py  vault.py
backend/clause_library/: employment_agreement.json  lease_agreement.json  nda.json  partnership_deed.json  service_agreement.json  vendor_agreement.json
backend/graph/: state.py  workflow.py
backend/graph/subgraphs/: dispute.py  new_doc.py  redline.py
backend/scripts/: seed_clauses.py
backend/services/: doc_generator.py  embeddings.py  legal_search.py  pdf_chunker.py  pdf_extractor.py  storage.py  supabase_client.py
frontend/: .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/src/app/features/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/app/intro/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/components/: MarkdownRenderer.tsx
frontend/src/lib/: agents.ts  middleware.ts
(+11 files in other folders)
