[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
